@@ -2,6 +2,7 @@
 HOME_DIR=/usr/local/blackhole
 PATH=$PATH:$HOME_DIR
 export PATH
+JVM_OPTION="-XX:+UseParNewGC"
 
 function doCache(){
   case "$1" in
@@ -25,7 +26,7 @@ function doCache(){
 case "$1" in
   start)
     echo "Starting blackhole..."
-    java -jar -Djava.io.tmpdir="$HOME_DIR/cache" $HOME_DIR/blackhole.jar -d"$HOME_DIR">> $HOME_DIR/log &
+    java -jar ${JVM_OPTION} -Djava.io.tmpdir="$HOME_DIR/cache" $HOME_DIR/blackhole.jar -d"$HOME_DIR">> $HOME_DIR/log &
     ;;
   stop)
     echo "Stopping blackhole"
@@ -39,7 +40,7 @@ case "$1" in
     java -jar $HOME_DIR/lib/wifesays-1.0.0-alpha.jar -cshutdown > /dev/null;
     sleep 2;
     echo "Starting blackhole..."
-    java -jar -Djava.io.tmpdir="$HOME_DIR/cache" $HOME_DIR/blackhole.jar -d"$HOME_DIR">> $HOME_DIR/log &
+    java -jar ${JVM_OPTION} -Djava.io.tmpdir="$HOME_DIR/cache" $HOME_DIR/blackhole.jar -d"$HOME_DIR">> $HOME_DIR/log &
     ;;
   reload)
     echo "Reloading blackhole"
